--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   padding: 2rem;
   width: 100%;
   min-height: 100vh;
-  background-image: url("./background.png"); /* Specify the path to your background image */
+  background-image: url("background.png"); /* Specify the path to your background image */
   background-size: cover; /* Cover the entire viewport */
   background-position: center; /* Center the background image */
   display: flex;
